managed to find out how to compile header files without source

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
-main: Student.o main.o
+main: Student.o main.o 
 	g++ Student.o main.o -o main
 
-main.o: main.cpp Student.h
+main.o: main.cpp Student.h xtra.h
 	g++ -c main.cpp
 
-Student.o: Student.h Student.cpp xtra.h
-	g++ -c Student.cpp xtra.h
+Student.o: Student.h Student.cpp
+	g++ -c Student.cpp
 
 clean:
 	rm *.o main
